# portion-renderer

./: README.md
grid/: Cargo.toml  README.md
grid/src/: lib.rs
portion-renderer/: Cargo.toml
portion-renderer/benches/: bench1.rs  bench_draw.rs
portion-renderer/src/: bounds.rs  lib.rs  portioner.rs  projection.rs  transform.rs
tightvec/: Cargo.toml
tightvec/src/: lib.rs
