[package]
name = "portion-renderer"
version = "0.1.0"
authors = ["nikita-skobov"]
edition = "2018"

[dependencies]
grid = { path = "../grid" }
tightvec = { path = "../tightvec" }

[dev-dependencies]
criterion = "0.3"
rand = "*"

[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "bench_draw"
harness = false
